# MRTF-Multimodal-PD

./: CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  environment.yml  requirements-pinned.txt
MRTF-Multimodal-PD/: README.md  pyproject.toml  requirements.txt
MRTF-Multimodal-PD/notebooks/: MRTF_implementation.ipynb
MRTF-Multimodal-PD/scripts/: train_dummy.py
MRTF-Multimodal-PD/src/mrtf/: __init__.py  config.py  preprocessing.py
MRTF-Multimodal-PD/src/mrtf/models/: __init__.py  core.py
MRTF-Multimodal-PD/src/mrtf/rl/: __init__.py  rasl.py
MRTF-Multimodal-PD/src/mrtf/xai/: __init__.py  explain.py
MRTF-Multimodal-PD/tests/: test_import.py
configs/: supplementary_demo.yaml
docs/: README.md
docs/supplementary/: MANIFEST.md  README.md  REPRODUCIBILITY.md
scripts/: eval_dummy.py  reproduce_supplementary.sh  train_dummy.py
src/mrtf/data/: __init__.py  datasets.py
src/mrtf/eval/: __init__.py  metrics.py
src/mrtf/repro/: __init__.py  seed.py
